feat: text indexing and multi jena versions
This commit adds support for jena 4.10 and 5.3
it also, refactors the code with some breaking changes to the default
settings.

changes:

  no spatial index is created by default.
  users must opt in to text / spatial indexing.

features:
  - add support for multiple jena versions (can easily include more if
  needed)
  - add sane checks for bad configurations.
    - warn about missing output volume mount
    - warn about dataset name mismatch with config.
    - warn about missing config

also includes updates to the docs